--- a/StudentNo_Classcode_Group_Name-Surname_DJS05-main/index.html
+++ b/StudentNo_Classcode_Group_Name-Surname_DJS05-main/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1 id="count-el">Tally App</h1>
+
+    <button id="add">Add</button>
+    <button id="subtract">Subtract</button>
+    <button id="reset">Reset</button>
+
+    <p id="save-el">Saved entries:</p>
+
+    <script src="script.js"></script>
+  </body>
 </html>
