added render and dispatch

--- a/StudentNo_Classcode_Group_Name-Surname_DJS05-main/index.html
+++ b/StudentNo_Classcode_Group_Name-Surname_DJS05-main/index.html
@@ -6,13 +6,11 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 id="count-el">Tally App</h1>
+    <h1 id="count-el"></h1>
 
     <button id="add">Add</button>
     <button id="subtract">Subtract</button>
     <button id="reset">Reset</button>
-
-    <p id="save-el">Saved entries:</p>
 
     <script src="script.js"></script>
   </body>
