--- a/StudentNo_Classcode_Group_Name-Surname_DJS05-main/index.html
+++ b/StudentNo_Classcode_Group_Name-Surname_DJS05-main/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 id="count-el"></h1>
+    <h1>Tally Counter</h1>
+    <h2 id="count-el"></h2>
 
     <button id="add">Add</button>
     <button id="subtract">Subtract</button>
