--- a/StudentNo_Classcode_Group_Name-Surname_DJS05-main/index.html
+++ b/StudentNo_Classcode_Group_Name-Surname_DJS05-main/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
   <body>
     <h1>Tally Counter</h1>
@@ -12,6 +12,7 @@
 
     <button id="add">Add</button>
     <button id="subtract">Subtract</button>
+    <button id="save">Save</button>
     <button id="reset">Reset</button>
 
     <script src="script.js"></script>
